Bug 1724211 - don't run flatpak tasks for ESR releases. r=releng-reviewers,mtabara DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122121

UltraBlame original commit: de3f1131768e05132e62a48e027d8073fab88ac3

--- a/taskcluster/ci/release-flatpak-push/kind.yml
+++ b/taskcluster/ci/release-flatpak-push/kind.yml
@@ -72,6 +72,14 @@ taskgraph
 .
 transforms
 .
+release
+:
+run_on_releases
+-
+taskgraph
+.
+transforms
+.
 release_deps
 :
 transforms
@@ -130,6 +138,19 @@ as
 part
 of
 CI
+run
+-
+on
+-
+releases
+:
+[
+beta
+release
+release
+-
+rc
+]
 shipping
 -
 phase
