--- a/taskcluster/ci/release-secondary-flatpak-push/kind.yml
+++ b/taskcluster/ci/release-secondary-flatpak-push/kind.yml
@@ -72,6 +72,14 @@ taskgraph
 .
 transforms
 .
+release
+:
+run_on_releases
+-
+taskgraph
+.
+transforms
+.
 release_deps
 :
 transforms
@@ -130,6 +138,17 @@ as
 part
 of
 CI
+run
+-
+on
+-
+releases
+:
+[
+release
+-
+rc
+]
 shipping
 -
 phase
@@ -194,24 +213,7 @@ push
 flatpak
 channel
 :
-by
--
-release
--
-type
-:
-release
--
-rc
-:
-"
 beta
-"
-default
-:
-"
-mock
-"
 jobs
 :
 firefox
