--- a/taskcluster/ci/release-flatpak-repackage/kind.yml
+++ b/taskcluster/ci/release-flatpak-repackage/kind.yml
@@ -72,6 +72,14 @@ taskgraph
 .
 transforms
 .
+release
+:
+run_on_releases
+-
+taskgraph
+.
+transforms
+.
 release_deps
 :
 transforms
@@ -141,6 +149,19 @@ as
 part
 of
 CI
+run
+-
+on
+-
+releases
+:
+[
+beta
+release
+release
+-
+rc
+]
 shipping
 -
 phase
