Bug 1724781 - Add org.mozilla.clearkey_with_protection_query keysystem to key system access code. r=alwu
Differential Revision: https://phabricator.services.mozilla.com/D122143

UltraBlame original commit: cee45dd2cfb911787c731404346cd1e2bc89272e

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -48927,6 +48927,40 @@ false
 mirror
 :
 always
+#
+Are
+test
+specific
+clearkey
+key
+systems
+enabled
+and
+exposed
+?
+-
+name
+:
+media
+.
+clearkey
+.
+test
+-
+key
+-
+systems
+.
+enabled
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
 -
 name
 :
