--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -674,8 +674,6 @@ linux1804
 clang
 -
 trunk
--
-qr
 /
 opt
 :
@@ -1119,8 +1117,6 @@ ref
 hw
 -
 2017
--
-qr
 /
 opt
 :
@@ -1732,6 +1728,35 @@ macosx1015
 64
 -
 shippable
+/
+opt
+:
+build
+-
+platform
+:
+macosx64
+-
+shippable
+/
+opt
+test
+-
+sets
+:
+-
+awsy
+-
+browsertime
+-
+macosx64
+-
+talos
+macosx1015
+-
+64
+-
+shippable
 -
 qr
 /
@@ -1818,6 +1843,56 @@ tests
 wdspec
 -
 headless
+macosx1015
+-
+64
+/
+debug
+:
+build
+-
+platform
+:
+macosx64
+/
+debug
+test
+-
+sets
+:
+-
+macosx1015
+-
+64
+-
+tests
+macosx1015
+-
+64
+-
+devedition
+/
+opt
+:
+build
+-
+platform
+:
+macosx64
+-
+devedition
+/
+opt
+test
+-
+sets
+:
+-
+macosx1015
+-
+64
+-
+tests
 macosx1015
 -
 64
