Bug 1724748 - Add regression tests for JSWindowActor nsITopLevelNavigationDelegate behaviour. r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D122151

UltraBlame original commit: 25e183793944777618596f8cdf239b0cd19a7774

--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -330,6 +330,21 @@ file_bug1691153
 .
 html
 [
+browser_TopLevelNavigationDelegate
+.
+js
+]
+support
+-
+files
+=
+dummy_iframe_page
+.
+html
+TestTopLevelNavigationDelegate
+.
+jsm
+[
 browser_alternate_fixup_middle_click_link
 .
 js
