--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -13103,6 +13103,41 @@ mirror
 :
 always
 #
+Allow
+mousemove
+events
+to
+be
+coalesced
+in
+the
+child
+side
+after
+they
+are
+sent
+.
+-
+name
+:
+dom
+.
+events
+.
+coalesce
+.
+mousemove
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 Whether
 to
 expose
