--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -37805,6 +37805,58 @@ do_not_use_directly
 :
 true
 #
+Whether
+to
+use
+fdlibm
+for
+Math
+.
+sin
+Math
+.
+cos
+and
+Math
+.
+tan
+.
+When
+#
+privacy
+.
+resistFingerprinting
+is
+true
+this
+pref
+is
+ignored
+and
+fdlibm
+is
+used
+#
+anyway
+.
+-
+name
+:
+javascript
+.
+options
+.
+use_fdlibm_for_sin_cos_tan
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
 -
 -
 -
