--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -54529,6 +54529,56 @@ mirror
 :
 always
 #
+Whether
+to
+use
+new
+implementation
+of
+ParseReasm
+-
+name
+:
+network
+.
+auth
+.
+use_new_parse_realm
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
+Whether
+to
+use
+new
+implementation
+of
+ParseReasm
+-
+name
+:
+network
+.
+auth
+.
+allow_multiple_challenges_same_line
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
 See
 the
 full
