Bug 1725149 [Wayland] Implement async clipboard, r=rmader
When widget.wayland.async-clipboard.enabled use async clipboard and D&D handlers provided by Gtk.

Differential Revision: https://phabricator.services.mozilla.com/D122353

UltraBlame original commit: ca7dd68c51a25ac829033a88cbd98ab18ff4f429

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -72735,6 +72735,33 @@ mirror
 :
 always
 #
+Use
+async
+clipboard
+on
+Wayland
+-
+name
+:
+widget
+.
+wayland
+.
+async
+-
+clipboard
+.
+enabled
+type
+:
+bool
+value
+:
+false
+mirror
+:
+once
+#
 Force
 fractional
 scaling
