Bug 1673870 - [devtools] Fix browser_resources_getAllResources.js intermittent. r=ladybenko.
The test was failing because we were getting cached messages
from a worker that were emitted late.
To fix this, we create a dedicated document with workers
only when we need them and remove workers from fission_document.html.
This allows us to cleanup a few tests that were already working
around the worker logs issue.

Differential Revision: https://phabricator.services.mozilla.com/D122326

UltraBlame original commit: 3cefcc8f7eed235ca591b69bef5228f8652cce47

--- a/devtools/shared/commands/resource/tests/browser.ini
+++ b/devtools/shared/commands/resource/tests/browser.ini
@@ -81,7 +81,13 @@ html
 fission_document
 .
 html
+fission_document_workers
+.
+html
 fission_iframe
+.
+html
+fission_iframe_workers
 .
 html
 service
