--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -31002,6 +31002,61 @@ mirror
 :
 always
 #
+Also
+expose
+a
+pref
+to
+allow
+users
+to
+force
+-
+disable
+WR
+.
+This
+is
+exposed
+#
+on
+all
+channels
+because
+WR
+can
+be
+enabled
+on
+qualified
+hardware
+on
+all
+#
+channels
+.
+-
+name
+:
+gfx
+.
+webrender
+.
+force
+-
+legacy
+-
+layers
+type
+:
+bool
+value
+:
+false
+mirror
+:
+once
+#
 ifdef
 MOZ_WIDGET_GTK
 -
