--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -4053,6 +4053,39 @@ test_style_cssText
 html
 ]
 [
+test_suppressed_microtasks
+.
+html
+]
+skip
+-
+if
+=
+debug
+|
+|
+asan
+|
+|
+verify
+|
+|
+toolkit
+=
+=
+'
+android
+'
+#
+The
+test
+needs
+to
+run
+reasonably
+fast
+.
+[
 test_text_wholeText
 .
 html
