Bug 1725400 - Fix GeckoView release artifactId. r=nalexander,owlish
The problem here is that the release artifactId was using single quotes instead
of double. I rewrote this code a little bit to avoid this sort of problem next
time by not having a release-build-only conditional branch.

Differential Revision: https://phabricator.services.mozilla.com/D122496

UltraBlame original commit: c0acb95460aab6c8d6600bf09bce099c8e324c91

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -4074,20 +4074,11 @@ omniSuffix
 omni
 "
 }
-if
-(
-mozconfig
-.
-substs
-.
-MOZ_UPDATE_CHANNEL
+def
+channelSuffix
 =
-=
-'
-release
-'
-)
-{
+"
+"
 /
 /
 Release
@@ -4104,19 +4095,23 @@ sake
 of
 simplicity
 .
-artifactId
+if
+(
+mozconfig
+.
+substs
+.
+MOZ_UPDATE_CHANNEL
+!
 =
 '
-geckoview
-omniSuffix
+release
 '
-}
-else
+)
 {
-artifactId
+channelSuffix
 =
 "
-geckoview
 -
 {
 mozconfig
@@ -4125,9 +4120,15 @@ substs
 .
 MOZ_UPDATE_CHANNEL
 }
-omniSuffix
 "
 }
+artifactId
+=
+"
+geckoview
+channelSuffix
+omniSuffix
+"
 if
 (
 mozconfig
