Bug 1699271 - Part 17: Generate LIR call instructions. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D119722

UltraBlame original commit: 9c17091087a8f42d61330d676606230541dc2314

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -196,8 +196,68 @@ LIR
 opcode
 #
 #
+call_instruction
+#
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+#
+Used
+to
+define
+call
+instructions
+.
+#
+-
+attribute
+not
+specified
+(
+default
+)
+:
+no
+code
+generated
+#
+-
+true
+:
+generates
+a
+call
+to
+setIsCall
+in
+the
+op
+'
+s
+constructor
+#
+#
 mir_op
 #
+=
+=
+=
+=
+=
+=
 =
 =
 =
@@ -3517,16 +3577,22 @@ false
 name
 :
 ThrowRuntimeLexicalError
-gen_boilerplate
+call_instruction
 :
-false
+true
+mir_op
+:
+true
 -
 name
 :
 ThrowMsg
-gen_boilerplate
+call_instruction
 :
-false
+true
+mir_op
+:
+true
 -
 name
 :
