Bug 1699271 - Part 18: Generate LIR instructions that produce LDefintions. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D119723

UltraBlame original commit: 778ead7a44baac1fd7d194ee9af9750f395841b9

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -196,6 +196,82 @@ LIR
 opcode
 #
 #
+result_type
+#
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+#
+Specifies
+the
+result
+type
+that
+is
+produced
+by
+this
+LIR
+instruction
+.
+#
+The
+result
+type
+can
+be
+any
+of
+the
+following
+:
+WordSized
+BoxedValue
+#
+or
+Int64
+.
+#
+-
+attribute
+not
+specified
+(
+default
+)
+:
+there
+is
+no
+result
+produced
+#
+by
+this
+LIR
+instruction
+#
+-
+result
+type
+:
+sets
+result
+type
+for
+this
+LIR
+instruction
+#
+#
 call_instruction
 #
 =
@@ -252,12 +328,6 @@ constructor
 #
 mir_op
 #
-=
-=
-=
-=
-=
-=
 =
 =
 =
@@ -401,9 +471,12 @@ false
 name
 :
 NurseryObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+mir_op
+:
+true
 -
 name
 :
@@ -411,20 +484,35 @@ Parameter
 gen_boilerplate
 :
 false
+#
+Stack
+offset
+for
+a
+word
+-
+sized
+immutable
+input
+value
+to
+a
+frame
+.
 -
 name
 :
 Callee
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
 IsConstructing
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
@@ -794,9 +882,9 @@ false
 name
 :
 UnreachableResultT
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
@@ -1935,9 +2023,15 @@ false
 name
 :
 ModuleMetadata
-gen_boilerplate
+result_type
 :
-false
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -2694,13 +2788,21 @@ IteratorEnd
 gen_boilerplate
 :
 false
+#
+Read
+the
+number
+of
+actual
+arguments
+.
 -
 name
 :
 ArgumentsLength
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
@@ -3367,9 +3469,9 @@ false
 name
 :
 WasmParameter
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
@@ -3416,9 +3518,9 @@ false
 name
 :
 WasmNullConstant
-gen_boilerplate
+result_type
 :
-false
+WordSized
 -
 name
 :
@@ -3765,9 +3867,15 @@ false
 name
 :
 BuiltinObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
