Bug 1699271 - Part 20: Generate LIR ops that use temporary registers. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D119725

UltraBlame original commit: 66491995508e0ff4f1465a9103fd679d2392b2c0

--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -493,7 +493,7 @@ with
 their
 types
 :
-operand
+WordSized
 getters
 and
 setters
@@ -505,6 +505,63 @@ passed
 into
 the
 constructor
+#
+#
+num_temps
+#
+=
+=
+=
+=
+=
+=
+=
+=
+#
+Specifies
+the
+number
+of
+temporary
+virtual
+registers
+LDefinitions
+used
+by
+#
+this
+LIR
+op
+.
+#
+-
+attribute
+not
+specified
+(
+default
+)
+:
+number
+of
+temps
+is
+set
+to
+0
+#
+-
+number
+of
+LDefinition
+temps
+:
+sets
+number
+of
+temps
+max
+15
 #
 #
 call_instruction
@@ -766,30 +823,64 @@ false
 name
 :
 NewArrayDynamicLength
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+length
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 NewIterator
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 NewTypedArray
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+2
+mir_op
+:
+true
 -
 name
 :
 NewTypedArrayDynamicLength
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+length
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -843,44 +934,189 @@ false
 name
 :
 NewPlainObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+3
+mir_op
+:
+true
 -
 name
 :
 NewArrayObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+2
+mir_op
+:
+true
+#
+Allocates
+a
+new
+NamedLambdaObject
+.
+#
+#
+This
+instruction
+generates
+two
+possible
+instruction
+sets
+:
+#
+(
+1
+)
+An
+inline
+allocation
+of
+the
+call
+object
+is
+attempted
+.
+#
+(
+2
+)
+Otherwise
+a
+callVM
+create
+a
+new
+object
+.
+#
 -
 name
 :
 NewNamedLambdaObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
+#
+Allocates
+a
+new
+CallObject
+.
+#
+#
+This
+instruction
+generates
+two
+possible
+instruction
+sets
+:
+#
+(
+1
+)
+If
+the
+call
+object
+is
+extensible
+this
+is
+a
+callVM
+to
+create
+the
+#
+call
+object
+.
+#
+(
+2
+)
+Otherwise
+an
+inline
+allocation
+of
+the
+call
+object
+is
+attempted
+.
+#
 -
 name
 :
 NewCallObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 NewStringObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 InitElemGetterSetter
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+id
+:
+BoxedValue
+value
+:
+WordSized
+call_instruction
+:
+true
+mir_op
+:
+true
 #
 Takes
 in
@@ -1037,20 +1273,74 @@ CreateThis
 gen_boilerplate
 :
 false
+#
+Allocate
+an
+object
+for
+|
+new
+|
+on
+the
+caller
+-
+side
+.
+#
+Always
+performs
+object
+initialization
+with
+a
+fast
+path
+.
 -
 name
 :
 CreateThisWithTemplate
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
+#
+Allocate
+a
+new
+arguments
+object
+for
+the
+frame
+.
 -
 name
 :
 CreateArgumentsObject
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+callObject
+:
+WordSized
+num_temps
+:
+3
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -1072,13 +1362,31 @@ GetArgumentsObjectArg
 gen_boilerplate
 :
 false
+#
+Set
+argument
+on
+arguments
+object
+.
 -
 name
 :
 SetArgumentsObjectArg
-gen_boilerplate
+operands
 :
-false
+argsObject
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -1111,13 +1419,35 @@ operands
 argsObject
 :
 WordSized
+#
+Guard
+that
+the
+given
+flags
+are
+not
+set
+on
+the
+arguments
+object
+.
 -
 name
 :
 GuardArgumentsObjectFlags
-gen_boilerplate
+operands
 :
-false
+argsObject
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 #
 If
 the
@@ -1299,9 +1629,17 @@ false
 name
 :
 GuardDOMExpandoMissingOrGuardShape
-gen_boilerplate
+operands
 :
-false
+input
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -1509,9 +1847,20 @@ false
 name
 :
 SameValueDouble
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+left
+:
+WordSized
+right
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -1546,13 +1895,25 @@ operands
 input
 :
 WordSized
+#
+Not
+operation
+on
+an
+int64
+.
 -
 name
 :
 NotI64
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+inputI64
+:
+Int64
 -
 name
 :
@@ -1892,13 +2253,35 @@ Hypot
 gen_boilerplate
 :
 false
+#
+Double
+raised
+to
+an
+integer
+power
+.
 -
 name
 :
 PowI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+WordSized
+power
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
 -
 name
 :
@@ -1906,13 +2289,35 @@ PowII
 gen_boilerplate
 :
 false
+#
+Double
+raised
+to
+a
+double
+power
+.
 -
 name
 :
 PowD
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+WordSized
+power
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
 -
 name
 :
@@ -1958,13 +2363,32 @@ operands
 num
 :
 WordSized
+#
+Sign
+value
+of
+a
+double
+with
+expected
+int32
+result
+.
 -
 name
 :
 SignDI
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -2171,20 +2595,59 @@ BigIntBitNot
 gen_boilerplate
 :
 false
+#
+Adds
+two
+string
+returning
+a
+string
+.
 -
 name
 :
 Concat
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+WordSized
+rhs
+:
+WordSized
+num_temps
+:
+5
+#
+Get
+uint16
+character
+code
+from
+a
+string
+.
 -
 name
 :
 CharCodeAt
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+str
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
 #
 Convert
 uint16
@@ -2206,13 +2669,30 @@ operands
 code
 :
 WordSized
+#
+Convert
+uint32
+code
+point
+to
+a
+string
+.
 -
 name
 :
 FromCodePoint
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+codePoint
+:
+WordSized
+num_temps
+:
+2
 #
 Calls
 the
@@ -2477,9 +2957,20 @@ false
 name
 :
 NaNToZero
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -2549,9 +3040,15 @@ true
 name
 :
 RegExp
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -2611,23 +3108,56 @@ true
 name
 :
 RegExpPrototypeOptimizable
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 RegExpInstanceOptimizable
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+proto
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 GetFirstDollarIndex
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+str
+:
+WordSized
+num_temps
+:
+3
 -
 name
 :
@@ -2708,16 +3238,41 @@ true
 name
 :
 Lambda
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+environmentChain
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 LambdaArrow
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+environmentChain
+:
+WordSized
+newTarget
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -3011,9 +3566,23 @@ WordSized
 name
 :
 GetNextEntryForIterator
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+iter
+:
+WordSized
+result
+:
+WordSized
+num_temps
+:
+3
+mir_op
+:
+true
 -
 name
 :
@@ -3346,30 +3915,95 @@ false
 name
 :
 ArrayPush
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+2
+mir_op
+:
+true
 -
 name
 :
 ArraySlice
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+begin
+:
+WordSized
+end
+:
+WordSized
+num_temps
+:
+2
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 ArrayJoin
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+array
+:
+WordSized
+separator
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 LoadUnboxedScalar
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+elements
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -3434,9 +4068,26 @@ false
 name
 :
 StoreTypedArrayElementHole
-gen_boilerplate
+operands
 :
-false
+elements
+:
+WordSized
+length
+:
+WordSized
+index
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -3560,9 +4211,17 @@ WordSized
 name
 :
 ClampDToUint8
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -3636,16 +4295,41 @@ true
 name
 :
 AddAndStoreSlot
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 AllocateAndStoreSlot
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+value
+:
+BoxedValue
+num_temps
+:
+2
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -3692,9 +4376,20 @@ false
 name
 :
 BindNameCache
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+environmentChain
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -3896,13 +4591,45 @@ operands
 string
 :
 WordSized
+#
+Round
+a
+double
+precision
+number
+and
+converts
+it
+to
+an
+int32
+.
+#
+Implements
+Math
+.
+round
+(
+)
+.
 -
 name
 :
 Round
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+num
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -4141,20 +4868,85 @@ CallDeleteElement
 gen_boilerplate
 :
 false
+#
+Patchable
+jump
+to
+stubs
+generated
+for
+a
+SetProperty
+cache
+.
 -
 name
 :
 SetPropertyCache
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+id
+:
+BoxedValue
+value
+:
+BoxedValue
+#
+Takes
+an
+additional
+temp
+:
+this
+is
+intendend
+to
+be
+FloatReg0
+to
+allow
+the
+#
+actual
+cache
+code
+to
+safely
+clobber
+that
+value
+without
+save
+and
+restore
+.
+num_temps
+:
+2
+mir_op
+:
+true
 -
 name
 :
 GetIteratorCache
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+value
+:
+BoxedValue
+num_temps
+:
+2
+mir_op
+:
+true
 -
 name
 :
@@ -4180,9 +4972,17 @@ false
 name
 :
 IteratorEnd
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+3
+mir_op
+:
+true
 #
 Read
 the
@@ -4205,13 +5005,33 @@ GetFrameArgument
 gen_boilerplate
 :
 false
+#
+Create
+the
+rest
+parameter
+.
 -
 name
 :
 Rest
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+numActuals
+:
+WordSized
+num_temps
+:
+3
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -4294,13 +5114,35 @@ TruncateBigIntToInt64
 gen_boilerplate
 :
 false
+#
+Create
+a
+new
+BigInt
+*
+from
+an
+unboxed
+int64
+.
 -
 name
 :
 Int64ToBigInt
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+input
+:
+Int64
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -4406,9 +5248,17 @@ WordSized
 name
 :
 GuardSpecificAtom
-gen_boilerplate
+operands
 :
-false
+str
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -4437,65 +5287,125 @@ WordSized
 name
 :
 GuardStringToInt32
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+string
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardStringToDouble
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+string
+:
+WordSized
+num_temps
+:
+2
 -
 name
 :
 GuardShape
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+in
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 GuardProto
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+expected
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardNullProto
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardIsNativeObject
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardIsProxy
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardIsNotProxy
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardIsNotDOMProxy
-gen_boilerplate
+operands
 :
-false
+proxy
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -4521,9 +5431,23 @@ false
 name
 :
 ProxySet
-gen_boilerplate
+operands
 :
-false
+proxy
+:
+WordSized
+rhs
+:
+BoxedValue
+num_temps
+:
+1
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -4588,37 +5512,83 @@ false
 name
 :
 MegamorphicHasProp
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+id
+:
+BoxedValue
+num_temps
+:
+2
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 GuardIsNotArrayBufferMaybeShared
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardIsTypedArray
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardNoDenseElements
-gen_boilerplate
+operands
 :
-false
+in
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 InCache
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+BoxedValue
+rhs
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -4816,16 +5786,41 @@ true
 name
 :
 GuardToClass
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
 ObjectClassToString
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+lhs
+:
+WordSized
+num_temps
+:
+1
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
@@ -5103,9 +6098,23 @@ false
 name
 :
 WasmStoreRef
-gen_boilerplate
+operands
 :
-false
+tls
+:
+WordSized
+valueAddr
+:
+WordSized
+value
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5204,9 +6213,15 @@ false
 name
 :
 WasmStackResultArea
-gen_boilerplate
+result_type
 :
-false
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5253,9 +6268,17 @@ false
 name
 :
 AssertClass
-gen_boilerplate
+operands
 :
-false
+input
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5326,16 +6349,29 @@ true
 name
 :
 GuardFunctionIsNonBuiltinCtor
-gen_boilerplate
+operands
 :
-false
+function
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardFunctionKind
-gen_boilerplate
+operands
 :
-false
+function
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5352,9 +6388,12 @@ true
 name
 :
 IncrementWarmUpCounter
-gen_boilerplate
+num_temps
 :
-false
+1
+mir_op
+:
+true
 -
 name
 :
@@ -5405,9 +6444,12 @@ false
 name
 :
 Debugger
-gen_boilerplate
+num_temps
 :
-false
+2
+call_instruction
+:
+true
 -
 name
 :
@@ -5464,9 +6506,14 @@ BoxedValue
 name
 :
 CheckClassHeritage
-gen_boilerplate
+operands
 :
-false
+heritage
+:
+BoxedValue
+num_temps
+:
+2
 -
 name
 :
@@ -5592,23 +6639,50 @@ true
 name
 :
 FinishBoundFunctionInit
-gen_boilerplate
+operands
 :
-false
+bound
+:
+WordSized
+target
+:
+WordSized
+argCount
+:
+WordSized
+num_temps
+:
+2
 -
 name
 :
 IsPackedArray
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
 GuardArrayIsPacked
-gen_boilerplate
+operands
 :
-false
+array
+:
+WordSized
+num_temps
+:
+2
+mir_op
+:
+true
 -
 name
 :
@@ -5730,16 +6804,32 @@ WordSized
 name
 :
 GuardHasGetterSetter
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+3
+call_instruction
+:
+true
+mir_op
+:
+true
 -
 name
 :
 GuardIsExtensible
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+num_temps
+:
+1
 -
 name
 :
@@ -5753,16 +6843,32 @@ WordSized
 name
 :
 GuardIndexGreaterThanDenseInitLength
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+2
 -
 name
 :
 GuardIndexIsValidUpdateOrAdd
-gen_boilerplate
+operands
 :
-false
+object
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+2
 -
 name
 :
@@ -5802,9 +6908,23 @@ false
 name
 :
 CallObjectHasSparseElement
-gen_boilerplate
+result_type
 :
-false
+WordSized
+operands
+:
+object
+:
+WordSized
+index
+:
+WordSized
+num_temps
+:
+2
+call_instruction
+:
+true
 -
 name
 :
